# pandas_tricks

./: LICENSE  pandas_tricks.ipynb  pyproject.toml
